--- a/portfoliopage/portfolio.css
+++ b/portfoliopage/portfolio.css
@@ -79,7 +79,7 @@ nav {
   border-bottom: 2px solid #1940a9;
   background-color: rgba(0, 0, 0, 0.096);
 }
-
+/* this h2 needs to be made page specific. I think? */
 h2 {
   grid-column: 2/3;
   margin: 3% auto;
@@ -110,6 +110,7 @@ button {
   font-style: italic;
 }
 
+/* portfolio page stuff down here */
 .portfolio {
   font-family: Arial, Helvetica, sans-serif;
   background-image: url(https://cdn.pixabay.com/photo/2021/01/24/20/21/cloud-5946381_960_720.jpg);
@@ -132,7 +133,7 @@ button {
 }
 
 .pagemain {
-  width: 1000px;
+  max-width: 1000px;
   height: auto;
   display: flex;
   flex-flow: row wrap;
@@ -149,4 +150,9 @@ button {
   font-weight: bolder;
   list-style-type: none;
   text-align: center;
+}
+
+.linktitles li a img {
+  width: 100%;
+  height: auto;
 }
