--- a/resume-styles.css
+++ b/resume-styles.css
@@ -19,10 +19,19 @@ header {
   grid-template-columns: 40% 60%;
   grid-template-rows: 1fr 1fr;
   grid-template-areas: "catimage headercont" "headerjob headerul";
+  border-bottom: 3px solid aqua;
+}
+header::before {
+  content: "";
+  background-color: tomato;
+  background-image: linear-gradient(to bottom right, tomato, yellow);
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
 }
 
 .catimage {
-  background-image: url(https://i.ytimg.com/vi/HeFSK-kye-E/hqdefault.jpg);
+  /* background-image: url(https://i.ytimg.com/vi/HeFSK-kye-E/hqdefault.jpg); */
+  background-image: url(https://media.giphy.com/media/jpbnoe3UIa8TU8LM13/giphy.gif);
   grid-area: catimage;
   background-size: contain;
   background-position: center;
@@ -32,8 +41,14 @@ header {
 #headerjob {
   grid-area: headerjob;
   justify-self: center;
+  align-self: center;
   margin: 0px;
   padding: 0px;
+  color: rgb(19, 172, 39);
+}
+
+#headerjob:hover {
+  color: tomato;
 }
 
 #headercont {
@@ -42,6 +57,8 @@ header {
   margin: 0px;
   justify-self: center;
   align-self: center;
+  background-size: cover;
+  color: white;
 }
 
 #headerul {
@@ -51,6 +68,7 @@ header {
   margin: 0px;
   padding: 0px;
   justify-self: center;
+  color: white;
 }
 
 main {
@@ -70,4 +88,47 @@ main {
 #jhistoryh2 {
   justify-self: center;
   font-size: 30px;
+  margin: 0px;
+  padding: 10px;
+  color: blueviolet;
 }
+
+#work {
+  margin: 0px;
+  padding: 10px;
+  list-style-type: none;
+}
+
+#exp {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 10% 40% 10% 40%;
+}
+
+#expert {
+  justify-self: center;
+  font-size: 30px;
+  margin: 0px;
+  padding: 10px;
+  color: blueviolet;
+}
+
+#vib {
+  margin: 0px;
+  padding: 10px;
+}
+
+#edu {
+  justify-self: center;
+  font-size: 30px;
+  margin: 0px;
+  padding: 10px;
+  color: blueviolet;
+}
+
+#scoo {
+  margin: 0px;
+  padding: 10px;
+}
+/* lots of repeated code but learning about the reset stuff in css will solve this
+later */
